--- a/src/components/Thread.css
+++ b/src/components/Thread.css
@@ -41,3 +41,52 @@
     /* background-color: rgba(255, 255, 255, 0.15); */
     color: rgb(2, 150, 199);
 }
+
+.thread__messages
+{
+    flex: 1;
+    overflow: auto;
+}
+
+.thread__header::-webkit-scrollbar
+{
+    display: none;
+}
+
+.thread__input
+{
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: transparent;
+    border-top: 1px solid rgba(190, 190, 190, .1);
+}
+
+.thread__input > form
+{
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+}
+
+.thread__input > form > input
+{
+    width: 98%;
+    outline-width: 0;
+    border: none;
+    outline: none;
+    border-radius: 0;
+    background-color: transparent;
+    padding: 5px;
+    color: white;
+}
+
+.thread__input > form > button
+{
+    color: white;
+}
+
+.thread__input > form > button:hover
+{
+    color: rgb(2, 150, 199);
+}
