--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -5,7 +5,7 @@
     height: 100vh;
     flex-direction: column;
     border-right: 1px solid rgba(190, 190, 190, .1);
-    background-color: #18222d;
+    background-color: #17212B;
 }
 
 .sidebar__header
@@ -22,7 +22,7 @@
     align-items: center;
     justify-content: center;
     flex: 1;
-    background-color: #313c4a;
+    background-color: #232F3D;
     color: white;
     border-radius: 5px;
     padding: 2px;
