--- a/src/components/Thread.css
+++ b/src/components/Thread.css
@@ -4,6 +4,7 @@
     flex: 0.65;
     flex-direction: column;
     height: 100vh;
+    background-color: #0E1621;
 }
 
 .thread__header
@@ -13,6 +14,7 @@
     align-items: center;
     align-content: center;
     justify-content: space-between;
+    background-color: #17212B;
 }
 
 .thread__header__contents
